...
                },
                headerShadowVisible: false,
            }}
        >
            <Tabs.Screen
                name="vault"
                options={{ title: "Vault", tabBarAccessibilityLabel: "Vault" }}
            />
            <Tabs.Screen
                name="account"
                options={{
                    title: "Account",
                    tabBarAccessibilityLabel: "Account",
...
                    title: "Devices",
                    tabBarAccessibilityLabel: "Devices",
                }}
            />
            <Tabs.Screen
                name="settings"
                options={{ title: "More", tabBarAccessibilityLabel: "More" }}
            />
        </Tabs>
    );
}

